--- a/src/index.css
+++ b/src/index.css
@@ -18,16 +18,16 @@ body{
 }
 
 .display{
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: bold;
   color:gray;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .controls button{
   font-size: 1.5rem;
   font-weight: bold;
-  padding: 10px 20px;
+  padding: 10px;
   margin:5px;
   border: none;
   border-radius: 10px;
