--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ h1{
   .start-btn,
   .stop-btn,
   .reset-btn {
-    padding: 8px 16px;
+    padding: 8px ;
   }
 }
 
@@ -84,7 +84,7 @@ h1{
   .start-btn,
   .stop-btn,
   .reset-btn {
-    padding: 6px 12px;
+    padding: 6px ;
   }
 }
 @keyframes App-logo-spin {
